--- a/accessibility/skip-links/01-index.html
+++ b/accessibility/skip-links/01-index.html
@@ -18,7 +18,7 @@
         <li><a href="#a11y-main-content" class="skip-link">Skip to main content</a></li>
       </ul>
     </nav>
-    <!– Header –>
+    <!--Header -->
     <header class="header" data-section-theme="dark">
       <div class="container">
         <div class="header-container">
@@ -72,8 +72,8 @@
         </div>
       </div>
     </header>
-    <!– Main –>
-      <!– Testimonials section –>
+    <!--Main -->
+      <!--Testimonials section -->
       <section id="testimonial" class="section section-testimonial">
         <div class="container">
           <header class="section-header">
@@ -116,7 +116,7 @@
           </div>
         </div>
       </section>
-      <!– Contact section –>
+      <!--Contact section -->
       <section id="contact" class="section section-contact">
         <div class="container">
           <header class="section-header">
@@ -132,7 +132,7 @@
         </div>
       </section>
     </main>
-    <!– Footer –>
+    <!--Footer -->
     <footer class="footer" data-section-theme="dark">
       <div  class="container">
         <div class="row">
